2003-11-24  Zoltan Varga  <vargaz@freemail.hu>

	* ILGenerator.cs MethodBuilder.cs ConstructorBuilder.cs: Retrieve 
	tokens from a token generator object instead of from the ModuleBuilder,
	to support the implementation of DynamicMethod. Also get rid of the 
	unused 'mbuilder' field.

	* ModuleBuilder.cs: Create a token generator object which can be
	passed to ILGenerator.

	* LocalBuilder.cs ILGenerator.cs: Get rid of 'module' field, obtain 
	needed objects from the ilgen object instead.

2003-11-21  Zoltan Varga  <vargaz@freemail.hu>

	* TypeBuilder.cs FieldBuilder.cs MethodBuilder.cs ConstructorBuilder.cs:  Add support for custom modifiers from NET 1.2.

	* ILGenerator.cs: Remove unused abuilder member.

2003-11-19  Andreas Nahr <ClassDevelopment@A-SoftTech.com>

	* OpCodes.cs: Remove Boxval for v1.1+

2003-11-19  Andreas Nahr <ClassDevelopment@A-SoftTech.com>

	* OpCodes.cs: Small rearrange to fix csc compiler warning about obsolete member used

2003-11-12  Zoltan Varga  <vargaz@freemail.hu>

	* AssemblyBuilderAccess.cs PackingSize: Add [Flags].

	* AssemblyBuilder.cs (DefineDynamicModule): Make internal method
	private.

	* AssemblyBuilder.cs (Save): Write out the main module at the end.
	
2003-11-06  Zoltan Varga  <vargaz@freemail.hu>
	
	* ConstructorBuilder.cs (.ctor): Automatically add RTSpecialName flag
	as MS does.

2003-11-06  Martin Baulig  <martin@ximian.com>

	* ModuleBuilder.cs (ModuleBuilder.Save): Call `build_metadata'
	before writing the symbol file.

2003-11-06  Zoltan Varga  <vargaz@freemail.hu>

	* AssemblyBuilder.cs (.ctor): Initialize the 'dir' field to something
	sensible.
	
	* AssemblyBuilder.cs (Save): Set 'created' flag.

	* AssemblyBuilder.cs (get_next_table_index): Moved to ModuleBuilder,
	since table indexes are per-module.

2003-11-03  Zoltan Varga  <vargaz@freemail.hu>

	* TypeBuilder.cs (DefineDefaultConstructor): Pass an array instead of 
	null to DefineConstructor, to avoid NullReferenceExceptions in the 
	binder code.
